spacing fix

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,8 +7,8 @@ body {
 
 #header {
   position: absolute;
-  top: 10%;
-  left: 10%;
+  top: 5%;
+  left: 5%;
   font-family: Arial, Helvetica, sans-serif;
   color: darkred;
   font-size: 125%;
